[project]
name = "nuviora"
version = "0.1.0"
description = "Nuviora Backend"
authors = [{ name = "Nuviora", email = "nuvioranuviora@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]